--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@ body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 0.8em;
 	color: #333;
-	line-height: 1.5;
+  line-height: 1.5;
 }
 
 body {
@@ -27,6 +27,7 @@ a {
 	color: var(--main-font-color);
 	text-decoration: none;
 }
+
 a:hover, a:focus {
 	color: #3397db;
 	text-decoration: none;
@@ -62,6 +63,8 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 
 /* ====================== Navigation ====================== */
 nav {
+  display: flex;
+  align-items: center;
   width: 100%;
   height: 5.5em;
   background-color: #252831;
@@ -74,7 +77,7 @@ nav h1 {
 
 nav h1 a {
   color: #fff;
-  font-size: 1.2em;
+  font-size: 1em;
   font-weight: 200;
   letter-spacing: 0.625em;
   text-transform: uppercase;
@@ -86,7 +89,7 @@ nav h1 a {
   background-color: #eee;
   font-size: 1em;
   margin: 0;
-  width: calc(50% - 5em);
+  width: 100%;
 }
 
 /* Display list items side by side */
@@ -123,21 +126,23 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
-  height: 100%;
+  padding: 1em 0;
   background-color: #3397DB;
   align-items: center;
 }
 
 .filter-options h2 {
   color: #fff;
-  font-size: 1rem;
+  font-size: 1.2em;
   font-weight: normal;
   line-height: 1;
   margin: 0 1.1em;
 }
+
 .filter-options select {
   background-color: #fff;
   border: none;
@@ -147,7 +152,7 @@ nav h1 a {
   letter-spacing: 0;
   margin: 0.625em;
   padding: 0 1em;
-  width: 12em;
+  min-width: 12em;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -175,11 +180,8 @@ nav h1 a {
 
 #restaurants-list .restaurant-img {
   background-color: #ccc;
-  display: block;
-  margin: 0;
-  max-width: 100%;
+  width: 100%;
   min-height: 15em;
-  min-width: 100%;
 }
 
 #restaurants-list li h1 {
@@ -193,13 +195,9 @@ nav h1 a {
   text-transform: uppercase;
 }
 
-#restaurants-list li div {
-  color: red !important;
-}
-
 #restaurants-list p {
   margin: 0;
-  font-size: 0.95em;
+  font-size: 1em;
 }
 
 #restaurants-list li a {
@@ -225,11 +223,10 @@ nav h1 a {
 
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
-  position: fixed;
-  right: 0;
-  top: 5em;
-  width: 50%;
+  position: relative;
+  top: 9em;
+  height: 25em;
+  width: 100%;
 }
 
 .inside #map {
@@ -241,7 +238,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 100%;
 }
 
 #restaurant-name {
@@ -281,7 +278,7 @@ nav h1 a {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 8em 2.2em 2em;
-  width: 50%;
+  width: 100%;
 }
 
 #reviews-container {
@@ -354,5 +351,30 @@ nav h1 a {
   color: #666;
 }
 
+@media only screen and (min-width: 500px){
+  #restaurant-container, #reviews-container,
+  .inside #footer {
+    width: 50%;
+  }
 
+  #reviews-list li {
+    width: 85%;
+  }
 
+  #breadcrumb {
+    width: calc(50% - 5em);
+  }
+  
+  .inside #map-container {
+    height: 87%;
+    width: 50%;
+    position: fixed;
+    right: 0;
+    top: 5em;
+  }
+
+  .filter-options {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
