--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 }
 
 body,td,th,p{
+  box-sizing: border-box;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 0.8em;
 	color: #333;
@@ -56,7 +57,7 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   color: #aaa;
   font-size: 0.7em;
   letter-spacing: 1px;
-  padding: 1.5em;
+  padding: 1.5em 0;
   text-align: center;
   text-transform: uppercase;
 }
@@ -176,7 +177,7 @@ nav h1 a {
   min-height: 22em;
   padding: 2em;
   text-align: left;
-  width: 20em;
+  max-width: 20em;
 }
 
 #restaurants-list .restaurant-img {
@@ -215,7 +216,7 @@ nav h1 a {
 }
 
 /* ====================== Restaurant Details ====================== */
-.inside header{
+.inside header {
   position: fixed;
   top: 0;
   height: 7em;
@@ -237,12 +238,6 @@ nav h1 a {
   width: 100%;
 }
 
-.inside #footer {
-  bottom: 0;
-  position: absolute;
-  width: 100%;
-}
-
 #restaurant-name {
   color: var(--main-font-color);
   font-family: Arial,sans-serif;
@@ -255,7 +250,7 @@ nav h1 a {
 }
 
 #restaurant-img {
-	width: 90%;
+	width: 100%;
 }
 
 #restaurant-address {
@@ -273,18 +268,15 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
 }
 
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
-  padding: 8em 2.2em 2em;
-  width: 100%;
-}
-
-#reviews-container {
-  padding: 2em 2.2em 5em;
+  margin: 0;
+  padding: 3em 2em;
+  max-width: 100%;
 }
 
 #reviews-container h2 {
@@ -309,22 +301,22 @@ nav h1 a {
   margin: 0 0 2em;
   overflow: hidden;
   position: relative;
-  width: 100%;
+  min-width: 100%;
 }
 
 .reviewDiv {
-  background-color: #252831;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  background-color: #252831;
   margin: 0;
   padding: 0 1em;
 } 
 
 .reviewerName {
   color: #fff;
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 
 .reviewDate {
@@ -340,7 +332,6 @@ nav h1 a {
   text-transform: uppercase;
   border-radius: 2px;
   margin: 1.2em;
-  padding: 0.2em;
   width: 7em;
 }
 
@@ -380,5 +371,4 @@ nav h1 a {
   #reviews-list li {
     width: 85%;
   }
-
 }
