--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,14 @@
   --main-font-color: #f18200; 
 }
 
+html {
+  font-size: 1em;
+}
+
 body,td,th,p{
   box-sizing: border-box;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1em;
+	font-size: 1rem;
 	color: #333;
   line-height: 1.5;
 }
@@ -20,7 +24,7 @@ body {
 
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1.1em;
+	font-size: 1.1rem;
 	color: #333;
 }
 
@@ -40,7 +44,7 @@ a img{
 
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0 0 1em;
+  margin: 0 0 1rem;
 }
 
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
@@ -53,11 +57,11 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
 }
 
 #footer {
-  background-color: #444;
-  color: #aaa;
-  font-size: 0.7em;
+  background-color: #333;
+  color: #c2c2c2;
+  font-size: 0.7rem;
   letter-spacing: 1px;
-  padding: 1.5em 0;
+  padding: 1.5rem 0;
   text-align: center;
   text-transform: uppercase;
 }
@@ -67,7 +71,7 @@ nav {
   display: flex;
   align-items: center;
   width: 100%;
-  height: 5.5em;
+  height: 5.5rem;
   background-color: #252831;
   text-align:center;
 }
@@ -78,19 +82,19 @@ nav h1 {
 
 nav h1 a {
   color: #fff;
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 200;
-  letter-spacing: 0.625em;
+  letter-spacing: 0.625rem;
   text-transform: uppercase;
 }
 
 #breadcrumb {
   display: flex;
   align-items: center;
-  height: 3.5em;
+  height: 3.5rem;
   list-style: none;
   background-color: #eee;
-  font-size: 1em;
+  font-size: 1rem;
   margin: 0;
 }
 
@@ -101,30 +105,38 @@ nav h1 a {
 
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li+li:before {
-  padding: 0.5em;
+  padding: 0.5rem;
   color: black;
   content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-  color: #0275d8;
+  color: #044F90; 
   text-decoration: none;
 }
 
 /* Add a color and underline on mouse-over */
-#breadcrumb li a:hover {
-  color: #01447e;
+#breadcrumb li a:hover,
+#breadcrumb li a:focus
+ {
+  color: #185D8C;
   text-decoration: underline;
 }
 
 /* ====================== Map ====================== */
 #map {
-  height: 28em;
+  height: 28rem;
   width: 100%;
   background-color: #ccc;
 }
 
+.leaflet-container a {
+  color:#185D8C !important;
+}
+.leaflet-container .leaflet-control-attribution {
+  background: #fff !important;
+}
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   display: flex;
@@ -132,29 +144,29 @@ nav h1 a {
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
-  padding: 1em 0;
-  background-color: #3397DB;
+  padding: 1rem 0;
+  background-color: #185D8C;
   align-items: center;
 }
 
 .filter-options h2 {
   color: #fff;
-  font-size: 1.2em;
+  font-size: 1.2rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 1.1em;
+  margin: 0 1.1rem;
 }
 
 .filter-options select {
   background-color: #fff;
   border: none;
   font-family: Arial,sans-serif;
-  font-size: 0.95em;
-  height: 2em;
+  font-size: 0.95rem;
+  height: 2rem;
   letter-spacing: 0;
-  margin: 0.625em;
-  padding: 0 1em;
-  min-width: 12em;
+  margin: 0.625rem;
+  padding: 0 1rem;
+  min-width: 12rem;
 }
 
 /* ====================== Restaurant Listing ====================== */
@@ -165,7 +177,7 @@ nav h1 a {
   background-color: #f3f3f3;
   list-style: outside none none;
   margin: 0;
-  padding: 2em 1em 4em;
+  padding: 2rem 1rem 4rem;
   text-align: center;
 }
 
@@ -173,33 +185,33 @@ nav h1 a {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial, sans-serif;
-  margin: 1em;
-  min-height: 22em;
-  padding: 2em;
+  margin: 1rem;
+  min-height: 22rem;
+  padding: 2rem;
   text-align: left;
-  max-width: 20em;
+  max-width: 20rem;
 }
 
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   width: 100%;
-  min-height: 15em;
+  min-height: 15rem;
 }
 
 #restaurants-list li h1 {
   color: var(--main-font-color);
   font-family: Arial,sans-serif;
-  font-size: 1.2em;
+  font-size: 1.2rem;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.3;
-  margin: 1em 0 0.5em;
+  margin: 1rem 0 0.5rem;
   text-transform: uppercase;
 }
 
 #restaurants-list p {
   margin: 0;
-  font-size: 1em;
+  font-size: 1rem;
 }
 
 #restaurants-list li a {
@@ -207,9 +219,9 @@ nav h1 a {
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 0.8em;
-  margin: 1em 0 0;
-  padding: 0.5em 2em 0.8em;
+  font-size: 0.8rem;
+  margin: 1rem 0 0;
+  padding: 0.5rem 2rem 0.8rem;
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
@@ -219,7 +231,7 @@ nav h1 a {
 .inside header {
   position: fixed;
   top: 0;
-  height: 7em;
+  height: 7rem;
   width: 100%;
   z-index: 2000;
 }
@@ -227,8 +239,8 @@ nav h1 a {
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   position: relative;
-  top: 9em;
-  height: 25em;
+  top: 9rem;
+  height: 25rem;
   width: 100%;
 }
 
@@ -241,10 +253,10 @@ nav h1 a {
 #restaurant-name {
   color: var(--main-font-color);
   font-family: Arial,sans-serif;
-  font-size: 1.6em;
+  font-size: 1.6rem;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 1em 0 2em;
+  margin: 1rem 0 2rem;
   text-transform: uppercase;
   line-height: 1.1;
 }
@@ -254,17 +266,17 @@ nav h1 a {
 }
 
 #restaurant-address {
-  font-size: 1em;
-  margin: 0.8em 0;
+  font-size: 1rem;
+  margin: 0.8rem 0;
 }
 
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 1em;
+  font-size: 1rem;
   font-weight: 300;
-  letter-spacing: 0.625em;
-  margin: 0 0 1.2em;
+  letter-spacing: 0.625rem;
+  margin: 0 0 1.2rem;
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
@@ -276,13 +288,13 @@ nav h1 a {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   margin: 0;
-  padding: 3em 2em;
+  padding: 3rem 2rem;
   max-width: 100%;
 }
 
 #reviews-container h2 {
   color: var(--main-font-color);
-  font-size: 2em;
+  font-size: 2rem;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
@@ -296,10 +308,10 @@ nav h1 a {
 #reviews-list li {
   background-color: #fff;
   border: 2px solid #f3f3f3;
-  border-radius: 1.5em 0 1.5em 0;
+  border-radius: 1.5rem 0 1.5rem 0;
   display: block;
   list-style-type: none;
-  margin: 0 0 2em;
+  margin: 0 0 2rem;
   overflow: hidden;
   position: relative;
   min-width: 100%;
@@ -312,33 +324,33 @@ nav h1 a {
   align-items: center;
   background-color: #252831;
   margin: 0;
-  padding: 0 1em;
+  padding: 0 1rem;
 } 
 
 .reviewerName {
   color: #fff;
-  font-size: 1.2em;
+  font-size: 1.2rem;
 }
 
 .reviewDate {
-  font-size: 1em;
+  font-size: 1rem;
   color: #d9d9d9;
 }
 
 .rating {
-  font-size: 1em;
+  font-size: 1rem;
   background-color: var(--main-font-color);
   color: #fff;
   text-align: center;
   text-transform: uppercase;
   border-radius: 2px;
-  margin: 1.2em;
-  width: 7em;
+  margin: 1.2rem;
+  width: 7rem;
 }
 
 .comments {
-  margin: 1.2em;
-  font-size: 1em;
+  margin: 1.2rem;
+  font-size: 1rem;
 }
 
 #restaurant-hours td {
@@ -358,7 +370,7 @@ nav h1 a {
     width: 50%;
     position: fixed;
     right: 0;
-    top: 5.5em;
+    top: 5.5rem;
   }
 
   #breadcrumb,
