--- a/css/styles.css
+++ b/css/styles.css
@@ -1,54 +1,75 @@
 @charset "utf-8";
 /* CSS Document */
 :root {
-  --main-font-color: #f18200; 
+  --main-font-color: #913f08;
 }
 
 html {
   font-size: 1em;
 }
 
-body,td,th,p{
+body,
+td,
+th,
+p {
   box-sizing: border-box;
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1rem;
-	color: #333;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1rem;
+  color: #333;
   line-height: 1.5;
 }
 
 body {
-	background-color: #fdfdfd;
-	margin: 0;
-	position: relative;
+  background-color: #fdfdfd;
+  margin: 0;
+  position: relative;
 }
 
-ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 1.1rem;
-	color: #333;
+ul,
+li {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.1rem;
+  color: #333;
 }
 
 a {
-	color: var(--main-font-color);
-	text-decoration: none;
+  color: var(--main-font-color);
+  text-decoration: none;
 }
 
-a:hover, a:focus {
-	color: #3397db;
-	text-decoration: none;
+a:hover,
+a:focus {
+  color: #3397db;
+  text-decoration: none;
 }
 
-a img{
-	border: none 0 #fff;
+a img {
+  border: none 0 #fff;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 0 1rem;
 }
 
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
 }
 
 #maincontent {
@@ -66,6 +87,10 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   text-transform: uppercase;
 }
 
+#footer strong {
+  color: #fff;
+}
+
 /* ====================== Navigation ====================== */
 nav {
   display: flex;
@@ -73,7 +98,7 @@ nav {
   width: 100%;
   height: 5.5rem;
   background-color: #252831;
-  text-align:center;
+  text-align: center;
 }
 
 nav h1 {
@@ -104,7 +129,7 @@ nav h1 a {
 }
 
 /* Add a slash symbol (/) before/behind each list item */
-#breadcrumb li+li:before {
+#breadcrumb li + li:before {
   padding: 0.5rem;
   color: black;
   content: "/\00a0";
@@ -112,15 +137,14 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-  color: #044F90; 
+  color: #044f90;
   text-decoration: none;
 }
 
 /* Add a color and underline on mouse-over */
 #breadcrumb li a:hover,
-#breadcrumb li a:focus
- {
-  color: #185D8C;
+#breadcrumb li a:focus {
+  color: #02274b;
   text-decoration: underline;
 }
 
@@ -132,7 +156,7 @@ nav h1 a {
 }
 
 .leaflet-container a {
-  color:#185D8C !important;
+  color: #185d8c !important;
 }
 .leaflet-container .leaflet-control-attribution {
   background: #fff !important;
@@ -145,7 +169,7 @@ nav h1 a {
   flex-wrap: wrap;
   width: 100%;
   padding: 1rem 0;
-  background-color: #185D8C;
+  background-color: #185d8c;
   align-items: center;
 }
 
@@ -160,7 +184,7 @@ nav h1 a {
 .filter-options select {
   background-color: #fff;
   border: none;
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 0.95rem;
   height: 2rem;
   letter-spacing: 0;
@@ -200,7 +224,7 @@ nav h1 a {
 
 #restaurants-list li h1 {
   color: var(--main-font-color);
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 1.2rem;
   font-weight: 200;
   letter-spacing: 0;
@@ -225,6 +249,12 @@ nav h1 a {
   text-align: center;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+#restaurants-list li a:hover,
+#restaurants-list li a:focus {
+  background-color: #491f04;
+  text-decoration: underline;
 }
 
 /* ====================== Restaurant Details ====================== */
@@ -252,7 +282,7 @@ nav h1 a {
 
 #restaurant-name {
   color: var(--main-font-color);
-  font-family: Arial,sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 1.6rem;
   font-weight: 200;
   letter-spacing: 0;
@@ -262,7 +292,8 @@ nav h1 a {
 }
 
 #restaurant-img {
-	width: 100%;
+  padding-top: 2em;
+  width: 100%;
 }
 
 #restaurant-address {
@@ -280,10 +311,10 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 100%;
+  width: 100%;
 }
 
-#restaurant-container, 
+#restaurant-container,
 #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
@@ -325,7 +356,7 @@ nav h1 a {
   background-color: #252831;
   margin: 0;
   padding: 0 1rem;
-} 
+}
 
 .reviewerName {
   color: #fff;
@@ -334,7 +365,7 @@ nav h1 a {
 
 .reviewDate {
   font-size: 1rem;
-  color: #d9d9d9;
+  color: #b3b3b3;
 }
 
 .rating {
@@ -357,14 +388,14 @@ nav h1 a {
   color: #666;
 }
 
-@media only screen and (min-width: 500px){
+@media only screen and (min-width: 500px) {
   .filter-options {
     flex-direction: row;
     flex-wrap: wrap;
   }
 }
 
-@media only screen and (min-width: 700px){ 
+@media only screen and (min-width: 700px) {
   .inside #map-container {
     height: 87%;
     width: 50%;
@@ -374,7 +405,7 @@ nav h1 a {
   }
 
   #breadcrumb,
-  #restaurant-container, 
+  #restaurant-container,
   #reviews-container,
   #reviews-list li {
     width: calc(50% - 6em);
