--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,23 @@
 @charset "utf-8";
 /* CSS Document */
 :root {
-  --main-font-color: #913f08;
+  --main-color: #913f08;
+  --main-darker-color: #491f04;
+  --details-color: #333;
 }
 
 html {
   font-size: 1em;
+  box-sizing: border-box;
 }
 
 body,
 td,
 th,
 p {
-  box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1rem;
-  color: #333;
+  color: var(--details-color, black);
   line-height: 1.5;
 }
 
@@ -29,11 +31,11 @@ ul,
 li {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.1rem;
-  color: #333;
+  color: var(--details-color, black);
 }
 
 a {
-  color: var(--main-font-color);
+  color: var(--main-color, sienna );
   text-decoration: none;
 }
 
@@ -77,7 +79,7 @@ section {
 }
 
 #footer {
-  background-color: #333;
+  background-color: var(--details-color, black);
   color: #c2c2c2;
   font-size: 0.7rem;
   letter-spacing: 1px;
@@ -95,7 +97,7 @@ section {
   position: absolute;
   top: -5rem;
   left: 0;
-  color: #000;
+  color: var(--details-color, black);
   background: #fff;
   padding: 0.3rem;
   border-radius: 0.2rem;
@@ -112,7 +114,7 @@ nav {
   align-items: center;
   width: 100%;
   height: 5.5rem;
-  background-color: #252831;
+  background-color: var(--details-color, black);
   text-align: center;
 }
 
@@ -146,20 +148,20 @@ nav h1 a {
 /* Add a slash symbol (/) before/behind each list item */
 #breadcrumb li + li:before {
   padding: 0.5rem;
-  color: black;
+  color: var(--details-color, black);
   content: "/\00a0";
 }
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-  color: var(--main-font-color);
-  text-decoration: none;
+  color: var(--main-color, sienna );
+  text-decoration: underline;
 }
 
 /* Add a color and underline on mouse-over */
 #breadcrumb li a:hover,
 #breadcrumb li a:focus {
-  color: #491f04;
+  color: var(--main-darker-color, saddlebrown);
   text-decoration: underline;
 }
 
@@ -244,7 +246,7 @@ nav h1 a {
 }
 
 #restaurants-list li h1 {
-  color: var(--main-font-color);
+  color: var(--main-color, sienna);
   font-family: Arial, sans-serif;
   font-size: 1.2rem;
   font-weight: 200;
@@ -260,7 +262,7 @@ nav h1 a {
 }
 
 #restaurants-list li a {
-  background-color: var(--main-font-color);
+  background-color: var(--main-color, sienna);
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
@@ -274,7 +276,7 @@ nav h1 a {
 
 #restaurants-list li a:hover,
 #restaurants-list li a:focus {
-  background-color: #491f04;
+  background-color: var(--main-darker-color, SaddleBrown);
   text-decoration: underline;
 }
 
@@ -302,7 +304,7 @@ nav h1 a {
 }
 
 #restaurant-name {
-  color: var(--main-font-color);
+  color: var(--main-color, sienna);
   font-family: Arial, sans-serif;
   font-size: 1.6rem;
   font-weight: 200;
@@ -323,7 +325,7 @@ nav h1 a {
 }
 
 #restaurant-cuisine {
-  background-color: #333;
+  background-color: var(--details-color, black);
   color: #ddd;
   font-size: 1rem;
   font-weight: 300;
@@ -345,7 +347,7 @@ nav h1 a {
 }
 
 #reviews-container h2 {
-  color: var(--main-font-color);
+  color: var(--main-color, sienna);
   font-size: 2rem;
   font-weight: 300;
   letter-spacing: -1px;
@@ -374,7 +376,7 @@ nav h1 a {
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  background-color: #252831;
+  background-color: var(--details-color, black);
   margin: 0;
   padding: 0 1rem;
 }
@@ -391,7 +393,7 @@ nav h1 a {
 
 .rating {
   font-size: 1rem;
-  background-color: var(--main-font-color);
+  background-color: var(--main-color, sienna);
   color: #fff;
   text-align: center;
   text-transform: uppercase;
